--- a/PythonLab.ipynb
+++ b/PythonLab.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PythonLab.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMx51wO2PSMCJunjKNyvxPj",
+      "authorship_tag": "ABX9TyPbAN7HdWYfiIN/1l2A2Lsr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -692,7 +692,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "713f716b-98f9-470a-d53d-52b45089449a"
+        "outputId": "0e6a8c6f-d2b5-408c-ae53-14cdc28c0004"
       },
       "source": [
         "def anagram(s1,s2):\n",
@@ -712,14 +712,14 @@
         "b=input()\n",
         "print(anagram(a,b))"
       ],
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "gvp\n",
-            "p   vg\n",
-            "True\n"
+            "hlj\n",
+            "lbkjbn\n",
+            "False\n"
           ],
           "name": "stdout"
         }
@@ -936,27 +936,31 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_s4GBv9cHaOP",
-        "outputId": "ef28bce3-660e-443b-a22c-b4f9d837f19b"
+        "outputId": "74d79d4b-fb74-46aa-e5d5-d37f24483de0"
       },
       "source": [
+        "a=list(map(int,input('enter a list').split()))\n",
+        "b=list(map(int,input('enter a list').split()))\n",
+        "c=list(map(int,input('enter a list').split()))\n",
         "\n",
         "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n"
+        "d=[a,b,c]\n",
+        "e=[len(a),len(b),len(c)]\n",
+        "n=max(e)\n",
+        "for j in range(0,n):\n",
+        "  for i in range(0,len(d)):\n",
+        "      if(len(d[i])>j):\n",
+        "          print(d[i][j],end=\" \")\n"
       ],
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[1, 4, 2, 4, 3, 4, 4, 4, 5]\n"
+            "enter a list33 53 234 2523 234\n",
+            "enter a list234 5234 2425\n",
+            "enter a list242 242 53\n",
+            "33 234 242 53 5234 242 234 2425 53 2523 234 "
           ],
           "name": "stdout"
         }
@@ -997,27 +1001,34 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "661aeb7e-305b-4ba7-8868-848918b4ccf8"
+        "outputId": "57ec4c50-2f3d-4ffe-c50f-4fe28ad04246"
       },
       "source": [
         "t=()\n",
-        "\n",
         "for i in range(int(input(\"enter the no of students      \"))):\n",
-        "  t+=eval(input(\"enter the details of student\"))\n",
-        "print(t)\n",
-        "\n",
-        "# (\"name\",42,\"add\",\"gvp\")\n",
-        "# (\"name1\",12,\"adre\",\"gvpce\")"
+        "  name=input()\n",
+        "  age=int(input())\n",
+        "  ad=input()\n",
+        "  clg=input()\n",
+        "  t1=name,age,ad,clg\n",
+        "  t+=t1\n",
+        "print(t)\n"
       ],
-      "execution_count": 27,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "enter the no of students      2\n",
-            "enter the details of student(\"name\",42,\"add\",\"gvp\")\n",
-            "enter the details of student(\"name1\",12,\"adre\",\"gvpce\")\n",
-            "('name', 42, 'add', 'gvp', 'name1', 12, 'adre', 'gvpce')\n"
+            "df\n",
+            "23\n",
+            "sdf\n",
+            "sd\n",
+            "asdf\n",
+            "34\n",
+            "sdf\n",
+            "asdf\n",
+            "('df', 23, 'sdf', 'sd', 'asdf', 34, 'sdf', 'asdf')\n"
           ],
           "name": "stdout"
         }
@@ -1040,7 +1051,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jOfFNtR8sB3K",
-        "outputId": "447dddfe-3cf3-4473-a1ba-5a48314833a1"
+        "outputId": "afadc9be-d66b-441d-80d2-f4afa2cd9657"
       },
       "source": [
         "# strn=input()\n",
@@ -1104,14 +1115,14 @@
         "  tup.append((l1[i][0],l1[i][1]))\n",
         "print(tup)"
       ],
-      "execution_count": 14,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "enter the stringnaveen karthik redddy\n",
-            "enter the number of values4\n",
-            "[('e', 3), ('d', 3), ('n', 2), ('a', 2)]\n"
+            "enter the stringnaveen karthik reddy\n",
+            "enter the number of values5\n",
+            "[('e', 3), ('n', 2), ('a', 2), ('k', 2), ('r', 2)]\n"
           ],
           "name": "stdout"
         }
