--- a/PythonLab.ipynb
+++ b/PythonLab.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PythonLab.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPbAN7HdWYfiIN/1l2A2Lsr",
+      "authorship_tag": "ABX9TyMn7F4+bLwBHy6amwC/i9Jw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -712,7 +712,7 @@
         "b=input()\n",
         "print(anagram(a,b))"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -952,7 +952,7 @@
         "      if(len(d[i])>j):\n",
         "          print(d[i][j],end=\" \")\n"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1014,7 +1014,7 @@
         "  t+=t1\n",
         "print(t)\n"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1115,7 +1115,7 @@
         "  tup.append((l1[i][0],l1[i][1]))\n",
         "print(tup)"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1162,21 +1162,19 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4def33a8-0381-4dc7-9607-84fc101adf78"
+        "outputId": "287cb391-157e-445d-dc3a-bf0017eca1c3"
       },
       "source": [
-        "strn = \"hello world\"\n",
-        "def is_vow(n):\n",
-        "  return n in ['a','e','i','o','u']\n",
-        "result = len(list(filter(lambda x: x,list(map(is_vow,list(strn))))))\n",
-        "print(result)\n"
+        "strn = \"hello worldu\"\n",
+        "result = len(list(filter(lambda x: x,list(map(lambda a: a in ['a','e','i','o','u'],list(strn))))))\n",
+        "print(result)"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "3\n"
+            "4\n"
           ],
           "name": "stdout"
         }
