--- a/PythonLab.ipynb
+++ b/PythonLab.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PythonLab.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMn7F4+bLwBHy6amwC/i9Jw",
+      "authorship_tag": "ABX9TyOseQXtllAkgKCwCYo6U1ya",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1166,10 +1166,10 @@
       },
       "source": [
         "strn = \"hello worldu\"\n",
-        "result = len(list(filter(lambda x: x,list(map(lambda a: a in ['a','e','i','o','u'],list(strn))))))\n",
+        "result = len(list(filter(lambda x: x,list(map(lambda a: a in ['a','A','e','E','i','I','o','O','u','U'],list(strn))))))\n",
         "print(result)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1234,22 +1234,22 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d92cbe38-5b29-4f7a-8646-8d2ffd663d1d"
+        "outputId": "c8e1b8f1-23d1-465b-b38a-1667959a9d6b"
       },
       "source": [
         "l=[\"aaaaaa\",\"aa\",\"aaaa\",\"aaa\",\"a\"]\n",
-        "\n",
+        "list_vowels=['a','A','e','E','i','I','o','O','u','U']\n",
         "def noOfVowels(x):\n",
         "  count=0\n",
         "  for i in x:\n",
-        "    if(i==\"a\" or i==\"e\" or i==\"i\" or i==\"o\" or i==\"u\"  ):\n",
+        "    if(i in list_vowels ):\n",
         "      count+=1\n",
         "  return count      \n",
         "\n",
         "l=sorted(l,key=noOfVowels)\n",
         "print(l)"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
