--- a/PythonLab.ipynb
+++ b/PythonLab.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PythonLab.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOseQXtllAkgKCwCYo6U1ya",
+      "authorship_tag": "ABX9TyN35vrs824MxzYID5UViTL8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1162,19 +1162,21 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "287cb391-157e-445d-dc3a-bf0017eca1c3"
+        "outputId": "3ad3ec74-4700-4ac1-9e50-67080113d86f"
       },
       "source": [
-        "strn = \"hello worldu\"\n",
+        "strn = input()\n",
         "result = len(list(filter(lambda x: x,list(map(lambda a: a in ['a','A','e','E','i','I','o','O','u','U'],list(strn))))))\n",
-        "print(result)"
+        "print(result)\n",
+        "# \"Words are thought of as the smallest meaningful unit of speech\""
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "4\n"
+            "\"Words are thought of as the smallest meaningful unit of speech\"\n",
+            "19\n"
           ],
           "name": "stdout"
         }
@@ -1196,23 +1198,28 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "91136212-c14d-435b-f376-393b7ed10309"
+        "outputId": "622d01b9-a061-4566-a039-878859b128d8"
       },
       "source": [
-        "s1=\"dddddddddeefff\"\n",
-        "s2=\"ddggfffffffff\"\n",
+        "s1=input()\n",
+        "s2=input()\n",
         "s=set()\n",
         "for i in s1:\n",
-        "  if (i in s2):\n",
+        "  if (i in s2 and i!=\" \"):\n",
         "    s.add(i)\n",
-        "print(s)"
+        "print(s)\n",
+        "\n",
+        "# \"sample text\"\n",
+        "# \"Words are thought of as the smallest meaningful unit of speech\""
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "{'f', 'd'}\n"
+            "\"sample text\"\n",
+            "\"Words are thought of as the smallest meaningful unit of speech\"\n",
+            "{'p', 'l', 'm', 's', 'a', '\"', 't', 'e'}\n"
           ],
           "name": "stdout"
         }
@@ -1234,10 +1241,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c8e1b8f1-23d1-465b-b38a-1667959a9d6b"
+        "outputId": "71b0b554-4e22-487c-9c61-99bf0303d772"
       },
       "source": [
-        "l=[\"aaaaaa\",\"aa\",\"aaaa\",\"aaa\",\"a\"]\n",
+        "l=eval(input())\n",
         "list_vowels=['a','A','e','E','i','I','o','O','u','U']\n",
         "def noOfVowels(x):\n",
         "  count=0\n",
@@ -1247,14 +1254,17 @@
         "  return count      \n",
         "\n",
         "l=sorted(l,key=noOfVowels)\n",
-        "print(l)"
+        "print(l)\n",
+        "\n",
+        "# [\"Words\", \"are\", \"thought\", \"of\", \"as\", \"the\" ,\"smallest\" ,\"meaningful\"]\n"
       ],
-      "execution_count": 2,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "['a', 'aa', 'aaa', 'aaaa', 'aaaaaa']\n"
+            "[\"Words\", \"are\", \"thought\", \"of\", \"as\", \"the\" ,\"smallest\" ,\"meaningful\"]\n",
+            "['Words', 'of', 'as', 'the', 'are', 'thought', 'smallest', 'meaningful']\n"
           ],
           "name": "stdout"
         }
