--- a/PythonLab.ipynb
+++ b/PythonLab.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PythonLab.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN35vrs824MxzYID5UViTL8",
+      "authorship_tag": "ABX9TyOHY/QPqmOrBRnRfZ1b37zN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1417,20 +1417,34 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "56f63b6c-a23f-411c-f525-daab31580e0c"
+        "outputId": "8da142f9-d1f1-4373-a3f7-e7d0add598eb"
       },
       "source": [
-        "dicc={1: 1, 2: 4, 3: 9, 4: 16, 5: 25}\n",
-        "print(sum(dicc.keys()))\n",
-        "print(sum(dicc.values()))"
+        "# dicc={1: 1, 2: 4, 3: 9, 4: 16, 5: 25}\n",
+        "dicc={}\n",
+        "for i in range(int(input(\"No of values\"))):\n",
+        "  keyy=int(input(\"enter the key\"))\n",
+        "  valuee=int(input(\"enter the values\"))\n",
+        "  dicc[keyy]=valuee\n",
+        "\n",
+        "\n",
+        "print(\"sum of keys \",sum(dicc.keys()))\n",
+        "print(\"sum of values \",sum(dicc.values()))"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "15\n",
-            "55\n"
+            "No of values3\n",
+            "enter the key1\n",
+            "enter the values1\n",
+            "enter the key2\n",
+            "enter the values4\n",
+            "enter the key3\n",
+            "enter the values9\n",
+            "sum of keys  6\n",
+            "sum of values  14\n"
           ],
           "name": "stdout"
         }
